--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,6 @@ server:
 
 
 kafka:
-  bootstrap-servers: localhost:9092
+  bootstrap-servers: 192.168.111.140:9092
   topic:
     helloworld: testtopic
